# bibtex-tools

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CHANGELOG.md  LICENSE  README.md  TODO.md  clean_bib_file.py  old.bib  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: pytest.yml
bibtextools/: __init__.py  __main__.py  clean_bib_file.py  cli.py  combine_bib_files.py  const.py  modernize_bib_file.py  util.py
examples/: minimal-example.tex  old.bib
tests/: abbr.bib  dirty.bib  duplicate_content.bib  duplicates.bib  old.bib  test_clean.py  test_click.py  test_combine.py  test_main.py  test_modern.py  test_util.py  unicode.bib
